--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.2.2
-      - run: npm ci
-      - run: npm test
-        env:
-          CI: true
+      - run: python -m unittest
