--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.2.2
-      - run: pip install httmock requests beautifulsoup4 lxml
+      - run: pip install httmock requests beautifulsoup4 lxml python-slugify
       - run: python -m unittest
